[tool.poetry]
name = "starter-fastapi-celery"
version = "0.1.0"
description = ""
authors = ["Abneet Wats <abneetwats24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
celery = "^5.2.7"
uvicorn = "^0.18.3"
flower = "^1.2.0"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=1.1.0b2"]
build-backend = "poetry.masonry.api"
